fix alignment

--- a/style.css
+++ b/style.css
@@ -48,9 +48,9 @@ li{
     -webkit-text-size-adjust: 100%;
 }
 
-.div4G {
+/* .div4G {
     display: flex;
-}
+} */
 
 /* G1 */
 #G1 {
